--- a/.gitignore
+++ b/.gitignore
@@ -153,3 +153,6 @@ cython_debug/
 social_book/core/migrations/0001_initial.py
 social_book/core/models.py
 
+social_book/core/migrations/0002_post.py
+social_book/core/migrations/0003_likepost.py
+social_book/core/migrations/0004_followerscount.py
